<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.liu.newmonitorsystem.LoginActivity">

    <ImageView
        android:id="@+id/bupt_logo"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:src="@drawable/bupt_logo" />

    <TextView
        android:id="@+id/systemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bupt_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/system_info"
        android:textColor="#a9a9a9"
        android:textSize="25sp" />

    <TableLayout
        android:id="@+id/table_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/systemInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:background="@drawable/title_radius">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userName"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:hint="@string/user_name"
                android:maxLength="50"
                android:singleLine="true" />
        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="#c8cacf" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passWord"
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/logIn"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@id/table_input"
        android:layout_marginTop="20dip"
        android:background="@drawable/button_radius"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:textColor="#6699ff"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:text="@string/copyright_info"
        android:textColor="#a9a9a9"
        android:textSize="15sp" />

</RelativeLayout>
